renaming some stuff

--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -20,6 +20,7 @@
 \newcommand{\bbR}{\mathbb{R}}
 \newcommand{\bbZ}{\mathbb{Z}}
 
+\newcommand{\bfb}{\mathbf{b}}
 \newcommand{\bfc}{\mathbf{c}}
 \newcommand{\bfe}{\mathbf{e}}
 \newcommand{\bff}{\mathbf{f}}
@@ -34,6 +35,7 @@
 \newcommand{\bfx}{\mathbf{x}}
 \newcommand{\bfy}{\mathbf{y}}
 \newcommand{\bfA}{\mathbf{A}}
+\newcommand{\bfC}{\mathbf{C}}
 \newcommand{\bfH}{\mathbf{H}}
 \newcommand{\bfI}{\mathbf{I}}
 \newcommand{\bfM}{\mathbf{M}}
@@ -54,6 +56,7 @@
 \newcommand{\calO}{\mathcal{O}}
 \newcommand{\calP}{\mathcal{P}}
 \newcommand{\calT}{\mathcal{T}}
+\newcommand{\calU}{\mathcal{U}}
 
 \newcommand{\dOmega}{\partial\Omega}
 
@@ -85,3 +88,7 @@
 \newlength{\figurewidth}
 \newlength{\figurewidthi}
 \newlength{\figurewidthii}
+
+% TODO: remove when no longer necessary
+\newcommand{\divergence}[1]{\nabla \cdot \lrp{#1}}
+\newcommand{\tensorfmt}[1]{\mathbf{#1}}
