--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -14,15 +14,15 @@
 \makeintropages
 
 \include{introduction/introduction}
-\include{part1/part1}
-\include{part1/chapter1/chapter1}
-\include{part1/chapter2/chapter2}
-\include{part1/chapter3/chapter3}
-\include{part2/part2}
-\include{part2/chapter4/chapter4}
-\include{part2/chapter5/chapter5}
+\include{partI/partI}
+\include{partI/chapter1/chapter1}
+\include{partI/chapter2/chapter2}
+\include{partI/chapter3/chapter3}
+\include{partII/partII}
+\include{partII/chapter4/chapter4}
+\include{partII/chapter5/chapter5}
 \appendix
-\include{part2/appendix}
+\include{partII/appendix}
 
 \bibliography{bib/CIM,bib/DG,bib/embedded,bib/eulerian,bib/FDM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_mixed,bib/FEM_nonconforming,bib/FEM_LM,bib/LS,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/LE,bib/MFEM,bib/MG,bib/MIB,bib/VNA,bib/XFEM,bib/XFEM_cohesive,bib/XFEM_convergence,bib/XFEM_LS,bib/XFEM_multi,bib/XFEM_quadrature,bib/XFEM_VNA,bib/petsc,bib/quadrature,bib/SO,bib/misc}
 \bibliographystyle{uclathes}
