--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -57,6 +57,7 @@
 \newcommand{\calP}{\mathcal{P}}
 \newcommand{\calT}{\mathcal{T}}
 \newcommand{\calU}{\mathcal{U}}
+\newcommand{\calV}{\mathcal{V}}
 
 \newcommand{\dOmega}{\partial\Omega}
 
