powering through the examples...

--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -17,6 +17,9 @@
 \usepackage{subfig}
 \usepackage{verbatim}
 
+\usepackage{dcolumn}
+\newcolumntype{.}{D{.}{.}{-1}}
+
 \newcommand{\bbR}{\mathbb{R}}
 \newcommand{\bbZ}{\mathbb{Z}}
 
