finished draft of chapter 1

--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -18,7 +18,9 @@
 %\dedication{}
 
 \acknowledgments{
-Regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions. I also wish to thank Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of publication submission. This work was supported in part by NSF DMS-0502315, NSF DMS-0652427, NSF CCF-0830554, DOE 09-LR-04-116741-BERA, ONR N000140310071, and ONR N000141010730.
+Regarding Chapter~\ref{chap:partI.crackpropagation}, this research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
+
+Regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions. I also wish to thank Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of publication submission on which this chapter was based. This research was supported in part by National Science Foundation grants DMS-0502315, DMS-0652427, and CCF-0830554; Department of Energy grant 09-LR-04-116741-BERA; and Office of Naval Research grants N000140310071 and N000141010730.
 }
 
 \vitaitem{2003, summer}{Research Student for Associate Professor Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
