--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -24,7 +24,7 @@
 \appendix
 \include{partII/appendix}
 
-\bibliography{bib/bindings,bib/CIM,bib/DG,bib/embedded,bib/eulerian,bib/FDM,bib/FEM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_mixed,bib/FEM_nonconforming,bib/FEM_LM,bib/LS,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/LE,bib/meshing,bib/MFEM,bib/MG,bib/MIB,bib/petsc,bib/quadrature,bib/SO,bib/VNA,bib/XFEM,bib/XFEM_cohesive,bib/XFEM_convergence,bib/XFEM_LS,bib/XFEM_multi,bib/XFEM_quadrature,bib/XFEM_VNA}
+\bibliography{bib/bindings,bib/CIM,bib/DG,bib/embedded,bib/eulerian,bib/FDM,bib/FEM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_mixed,bib/FEM_nonconforming,bib/FEM_LM,bib/LS,bib/fracture,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/LE,bib/meshing,bib/MFEM,bib/MG,bib/MIB,bib/petsc,bib/quadrature,bib/SO,bib/VNA,bib/XFEM,bib/XFEM_cohesive,bib/XFEM_convergence,bib/XFEM_LS,bib/XFEM_multi,bib/XFEM_quadrature,bib/XFEM_VNA}
 \bibliographystyle{uclathes}
 
 \end{document}
