--- a/dissertation/bib/FEM.bib
+++ b/dissertation/bib/FEM.bib
@@ -1,3 +1,39 @@
+%Irving:2004:IFE:1028523.1028541
+%url = {http://dx.doi.org/10.1145/1028523.1028541},
+%doi = {10.1145/1028523.1028541},
+%acmid = {1028541},
+@inproceedings{Irving04,
+ author = {Irving, G. and Teran, J. and Fedkiw, R.},
+ title = {Invertible finite elements for robust simulation of large deformation},
+ booktitle = {Proceedings of the 2004 ACM SIGGRAPH/Eurographics symposium on Computer animation},
+ series = {SCA '04},
+ year = {2004},
+ isbn = {3-905673-14-2},
+ location = {Grenoble, France},
+ pages = {131--140},
+ numpages = {10},
+ publisher = {Eurographics Association},
+ address = {Aire-la-Ville, Switzerland, Switzerland},
+}
+
+%Teran:2005:RQF:1073368.1073394
+%url = {http://doi.acm.org/10.1145/1073368.1073394},
+%doi = {10.1145/1073368.1073394},
+%acmid = {1073394},
+@inproceedings{Teran05,
+ author = {Teran, Joseph and Sifakis, Eftychios and Irving, Geoffrey and Fedkiw, Ronald},
+ title = {Robust quasistatic finite elements and flesh simulation},
+ booktitle = {Proceedings of the 2005 ACM SIGGRAPH/Eurographics symposium on Computer animation},
+ series = {SCA '05},
+ year = {2005},
+ isbn = {1-59593-198-8},
+ location = {Los Angeles, California},
+ pages = {181--190},
+ numpages = {10},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
 %braess2007finite
 %url={http://books.google.com/books?id=PizECgOWoGgC},
 @book{Braess07,
