--- a/dissertation/partI/partI.tex
+++ b/dissertation/partI/partI.tex
@@ -37,17 +37,18 @@ In the first phase, the algorithm processes each mesh triangle individually, ide
 \caption{Simple example of an original mesh triangle (left) duplicated with its disjoint \emph{material regions} (blue) being distributed among the duplicates (middle, right). Likewise, the vertices in each duplicate are either identified with the vertices of the original triangle (\emph{material nodes}, sold blue) or duplicate copies (\emph{virtual nodes}, hollow blue), depending on whether they fall within a material region.}
 \label{fig:partI.cutting.triangle.2}
 \end{figure}
+
 \begin{figure}[htbp]
 \centering
 \includegraphics[height=\figureheight]{partI/figures/complex_cutting}
-\caption{A more complex example of the initial division of triangle by a cutting curve. Since the original mesh triangle is divided into $3$ disjoint material regions (left), the algorithm generates $3$ duplicate triangles, each possessing a different material region (right). (Coloring is consistent with that used in Figure~\ref{fig:partI.cutting.triangle.2}.)}
+\caption{A more complex example of the initial division of a triangle by a cutting curve. Since the original mesh triangle is divided into $3$ disjoint material regions (left), the algorithm generates $3$ duplicate triangles, each possessing a different material region (right). (Coloring is consistent with that used in Figure~\ref{fig:partI.cutting.triangle.2}.)}
 \label{fig:partI.cutting.triangle.3}
 \end{figure}
 
-After processing all triangles in the original mesh $\calT$ individually, we obtain a duplicate mesh $\calT'$ composed of duplicate triangles. The second phase of the algorithm proceeds to determine global material connectivity within this duplicate mesh (see Figure~\ref{fig:partI.cutting.example}). For notational convenience, let $C(T)$ denote the set of triangles duplicated from original triangle $T \in \calT$, and let $P(T')$ denote the original ``parent'' triangle of a duplicate triangle $T' \in \calT'$, so that $T' \in C(T)$ if and only if $T = P(T')$. Determining global material connectivity then proceeds as follows. Given a triangle $T' \in \calT'$, let $T = P(T')$. Then for each $U' \in C(U)$ where $U$ is face-adjacent to $T$, determine if $U'$ shares \emph{material connectivity} across the $T-U$ face with $T'$. If so, the vertices of the corresponding faces of $T'$ and $U'$ are identified as equivalent and collapsed, thus joining these duplicate triangles together.
+After processing all triangles in the original mesh $\calT$ individually, we obtain a duplicate mesh $\calT'$ composed of duplicated triangles and vertices. The second phase of the algorithm proceeds to determine global material connectivity within this duplicate mesh (see Figure~\ref{fig:partI.cutting.example}). For notational convenience, let $C(T)$ denote the set of triangles duplicated from an original triangle $T \in \calT$, and let $P(T')$ denote the original ``parent'' triangle of a duplicate triangle $T' \in \calT'$, so that $T' \in C(T)$ if and only if $T = P(T')$. Determining global material connectivity then proceeds as follows. Given a triangle $T' \in \calT'$, let $T = P(T')$. Then for each $U' \in C(U)$ where $U$ is face-adjacent to $T$, determine if $U'$ shares \emph{material connectivity} across the $T-U$ face with $T'$. If so, the vertices of the corresponding faces of $T'$ and $U'$ are identified as equivalent and collapsed, thus joining these duplicate triangles together.
 
 Refer again to Figure~\ref{fig:partI.cutting.example} for an example overview of the entire algorithm. The original mesh, at left, consists of three triangles. This mesh is cut by two segmented curves (red); the geometry typifies some of the subtleties in the algorithm, as the center triangle contains a branch, a tip, and is cut into multiple pieces. In the first phase of the algorithm, each triangle is processed in isolation and duplicated based on the disjoint material regions created by the cutting curves, as shown in the center of Figure~\ref{fig:partI.cutting.example}. In the second phase, these duplicate triangles are joined along faces where they share material connectivity, with the final mesh on the right of Figure~\ref{fig:partI.cutting.example}.
 
-Notice that, in particular, if mesh vertices are identified with degrees of freedom, the latter mesh in Figure~\ref{fig:partI.cutting.example} possesses the necessary richness in degrees of freedom to allow the upper crack to partially separate and the lower crack to separate entirely. This automatic generation of additional degrees of freedom is one of the motivating conveniences to combine this mesh cutting algorithm with an XFEM framework, and its fruits are demonstrated in the remainder of Part I.
+Notice that, in particular, if mesh vertices are identified with degrees of freedom, the latter mesh in Figure~\ref{fig:partI.cutting.example} possesses the necessary richness in degrees of freedom to allow the upper crack to partially separate and the lower crack to separate entirely. This automatic generation of additional degrees of freedom is one of the primary motivations to combine this mesh cutting algorithm with an XFEM framework, and its fruits are demonstrated in the remainder of Part I.
 
 \renewcommand{\thechapter}{\arabic{chapter}}
