--- a/dissertation/partII/partII.tex
+++ b/dissertation/partII/partII.tex
@@ -53,11 +53,11 @@ where
 \end{itemize}
 In linear elasticity, the stress $\bssigma(\bfu)$ is linearly dependent on the Cauchy strain $\bsepsilon(\bfu)$ via
 \begin{align*}
-\bsepsilon(\bfu) & = \frac{1}{2} \lrp{\nabla \bfu + \lrp{\nabla \bfu}^t}, \\
-\bssigma(\bfu)   & = 2 \mu \bsepsilon(\bfu) + \lambda \lrp{\tr \bsepsilon(\bfu)} \bfI \\
-                 & = \mu \lrp{\nabla \bfu + \lrp{\nabla \bfu}^t} + \lambda \lrp{\nabla \cdot \bfu} \bfI.
+\bsepsilon(\bfu) := {} & \frac{1}{2} \lrp{\nabla \bfu + \lrp{\nabla \bfu}^t}, \\
+\bssigma(\bfu)   := {} & 2 \mu \bsepsilon(\bfu) + \lambda \lrp{\tr \bsepsilon(\bfu)} \bfI \\
+                  = {} & \mu \lrp{\nabla \bfu + \lrp{\nabla \bfu}^t} + \lambda \lrp{\nabla \cdot \bfu} \bfI.
 \end{align*}
-Therefore, the equations \eqref{eq:partII.elasticity} are equivalently formulated as
+Therefore, \eqref{eq:partII.elasticity} is equivalently formulated as
 \begin{subequations} \label{eq:partII.LE}
 \begin{align}
 -\lrp{\Delta \bfI + (\lambda + \mu) \nabla \nabla^t} \bfu & = \bff \quad \in \Omega \label{eq:partII.LE.PDE} \\
@@ -81,13 +81,13 @@ In all the above, $\dOmega = \dOmega_d \sqcup \dOmega_n$, and we assume $\Gamma$
 \label{fig:partII.embedding}
 \end{figure}
 
-Although the use of embedded methods avoids the complexities inherent to unstructured mesh generation, as discussed in Part: Introduction, it does introduce difficulties of their own, though typically of a different and less computationally intensive variety. One prominent such difficulty is the enforcement of algebraic surface conditions (such as boundary conditions or interfacial jump conditions) on embedded features such as $\dOmega$ and $\Gamma$, since the degrees of freedom now do not lie on said embedded features. Our methods employ a Lagrange multiplier space in a relatively straightforward way to weakly enforce Dirichlet boundary conditions and interfacial jump conditions. We mention some alternative techniques in the background sections in the subsequent chapters, and for a good review, see Lew et al. \cite{Lew.Adrian08}.
+Although the use of embedded methods avoids the complexities inherent to unstructured mesh generation, as discussed in the overall Introduction, they do introduce difficulties of their own, though typically of a different and less computationally intensive variety. One prominent such difficulty is the enforcement of algebraic surface conditions (such as boundary conditions or interfacial jump conditions) on embedded features such as $\dOmega$ and $\Gamma$, since the degrees of freedom now do not lie on said embedded features. Our methods employ a Lagrange multiplier space in a relatively straightforward way to weakly enforce Dirichlet boundary conditions and interfacial jump conditions. We mention some alternative techniques in the background sections in the subsequent chapters, and for a good review, see Lew et al. \cite{Lew.Adrian08}.
 
-A further challenge is the retention of higher order accuracy in $L^{\infty}$. The difficulty typically lies in determining the numerical stencils near embedded features that retain the accuracy achieved in the regions of the domain sufficiently distanced from said embedded features. Many present methods address these problems at the cost of implementation complexity and sometimes require significant effort to adapt to general applications. But while achieving higher order accuracy in the discretization may be nontrivial, to reiterate from Part: Introduction, the ability to use a regular Cartesian grid greatly facilitates the implementation of efficient solution methods. Specifically for high resolution discretizations, direct methods to solve the discrete linear systems become too slow and memory intensive. Geometric multigrid methods and domain decomposition approaches have been shown to provide very favorable performance in this setting. However, their application to embedded discretizations is not entirely straightforward. Ultimately, special attention must be paid near embedded features for both discretization accuracy and efficient numerical linear algebra, as we describe in the subsequent chapters.
+A further challenge is the retention of higher order accuracy in $L^{\infty}$. The difficulty typically lies in determining the numerical stencils near embedded features that retain the accuracy achieved in the regions of the domain sufficiently distanced from said embedded features. Many present methods address these problems at the cost of implementation complexity and sometimes require significant effort to adapt to general applications. But while achieving higher order accuracy in the discretization may be nontrivial, to reiterate from the overall Introduction, the ability to use a regular Cartesian grid greatly facilitates the implementation of efficient solution techniques. Specifically for high resolution discretizations, direct methods to solve the discrete linear systems become too slow and memory intensive. Geometric multigrid methods and domain decomposition approaches have been shown to provide very favorable performance in this setting. However, their application to embedded discretizations is not entirely straightforward. Ultimately, special attention must be paid near embedded features for both discretization accuracy and efficient numerical linear algebra, as we describe in the subsequent chapters.
 
 The methods presented in the following chapters build on the work of Bedrossian et al. \cite{Bedrossian10}, which introduced a second order virtual node method for solving the interfacial Poisson problem \eqref{eq:partII.poisson} in $2$ dimensions. The discretization presented in \cite{Bedrossian10} is easy to implement and yields a symmetric positive definite sparse linear system for both interface problems and boundary value problems on irregular domains. In summary, this virtual node method employs a uniform Cartesian grid with duplicated Cartesian bilinear elements along the interface. These duplicated elements introduce additional \emph{virtual} nodes or degrees of freedom to accurately capture the lack of regularity in the solution. The method is variational to define stencils symmetrically, and a different discretization is used depending on proximity to embedded features, allowing for the retention of the standard $5$-point finite difference stencil away from embedded boundaries and interfaces. Langrange multipliers are used to weakly enforce embedded Dirichlet conditions \eqref{eq:partII.poisson.D} and embedded interfacial jump conditions \eqref{eq:partII.poisson.DJ}, and the choice of Lagrange multiplier space admits a symmetric positive definite discretization. In the special case when $\beta$ is smooth, a discontinuity removal technique allows the use of the standard $5$-point Poisson stencil even across the embedded interface.
 
-The feature set of this virtual node approach is very powerful. In Chapter \ref{chap:partII.poisson}, we improve many aspects of \cite{Bedrossian10} and provide key modifications necessary to extend the method to $3$ dimensions. Within the context of discretizing the Dirichlet conditions \eqref{eq:partII.poisson.D} and interfacial jump conditions \eqref{eq:partII.poisson.DJ}, we present a novel and flexible algorithm to define the discrete Lagrange multiplier space. This algorithm gives more control on the conditioning of the resulting linear system and specifically addresses the conditioning issues (see Appendix~\ref{chap:partII.appendix.constraintconditioning}) we found in the straightforward extension of \cite{Bedrossian10} to $3$ dimensions. We also give an expanded treatment of the discontinuity removal technique, detailing an algorithm for the construction of a scalar function satisfying the interfacial jump conditions (\ref{eq:partII.poisson.DJ}, \ref{eq:partII.poisson.NJ}).
+In Chapter \ref{chap:partII.poisson}, we improve many aspects of \cite{Bedrossian10} and provide key modifications necessary to extend the method to $3$ dimensions. Within the context of discretizing the Dirichlet conditions \eqref{eq:partII.poisson.D} and interfacial jump conditions \eqref{eq:partII.poisson.DJ}, we present a novel and flexible algorithm to define the discrete Lagrange multiplier space. This algorithm gives more control on the conditioning of the resulting linear system and specifically addresses the conditioning issues (see Appendix~\ref{chap:partII.appendix.constraintconditioning}) we found in the straightforward extension of \cite{Bedrossian10} to $3$ dimensions. We also give an expanded treatment of the discontinuity removal technique, detailing an algorithm for the construction of a scalar function satisfying the interfacial jump conditions (\ref{eq:partII.poisson.DJ}, \ref{eq:partII.poisson.NJ}).
 
 In Chapter \ref{chap:partII.LE}, we apply some of the same basic ideas from Chapter \ref{chap:partII.poisson} to numerically solve the equilibrium equations of linear elasticity in the nearly incompressible regime. We stabilize the method by introducing pressure as an additional unknown in a mixed variational formulation. Our discretization of this variational formulation is then based on a MAC-type staggering of $x$ and $y$-component displacements with pressure degrees of freedom at cell centers. Again, we achieve second order accuracy in $L^{\infty}$ while retaining a symmetric positive definite linear system.
 
@@ -100,6 +100,6 @@ In summary, our methods for solving elliptic problems such as Poisson's equation
 \item relatively simple to implement with a nice progression of complexity from the discretization of Neumann boundary conditions to Dirichlet boundary conditions to interfacial jump conditions;
 \item yields a discrete linear system which is symmetric and positive definite, facilitating the application of a wide variety of black-box solvers or, as we show, efficient geometric multigrid methods with nearly optimal convergence rates.
 \end{itemize}
-Furthermore, our method for solving \eqref{eq:partII.LE} retains the above properties even in the face of nearly incompressible materials.
+Furthermore, our method for solving \eqref{eq:partII.LE} retains the above properties even in the nearly incompressible regime.
 
 \renewcommand{\thechapter}{\arabic{chapter}}
