--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -4,7 +4,7 @@
 % Copyright 2012, Jeffrey Hellrung.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Applications of Embedded Methods to Crack Propagation, Virtual Surgery, Fracture Animation, and Elliptic Partial Differential Equations}
+\title{On Embedded Methods for Crack Propagation, Virtual Surgery, Shattered Objects in Computer Animation, and Elliptic Partial Differential Equations}
 \author{Jeffrey Lee Hellrung, Jr.}
 \department{Mathematics}
 \degreeyear{2012}
@@ -18,9 +18,17 @@
 %\dedication{}
 
 \acknowledgments{
-Regarding Chapter~\ref{chap:partI.crackpropagation}, this research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
+I wish to thank the following for their support over the last several years as I've progressed through my doctoral degree here at UCLA:
 
-Regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions. I also wish to thank Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of publication submission on which this chapter was based. This research was supported in part by National Science Foundation grants DMS-0502315, DMS-0652427, and CCF-0830554; Department of Energy grant 09-LR-04-116741-BERA; and Office of Naval Research grants N000140310071 and N000141010730.
+\begin{itemize}
+\item My family, especially my mom. I know it was difficult for her to resist the temptation to ask me about my degree progress every week, especially in the later years.
+\item My girlfriend, Sirian; and her mom, Lisa.
+\item The rest of my entering class who've remained in the department as long as I have. Or longer.
+\end{itemize}
+
+Specifically regarding Chapter~\ref{chap:partI.crackpropagation}, this research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
+
+Specifically regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions. I also wish to thank Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission on which this chapter was based. This research was supported in part by National Science Foundation grants DMS-0502315, DMS-0652427, and CCF-0830554; Department of Energy grant 09-LR-04-116741-BERA; and Office of Naval Research grants N000140310071 and N000141010730.
 }
 
 \vitaitem{2003, summer}{Research Student for Associate Professor Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
@@ -39,8 +47,9 @@ Regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob Bedrossian an
 \publication{E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' Studies in Health Technology and Informatics 2009; 142:313-8. (PMID:19377176)}
 \publication{\textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ``Geometric fracture modeling in Bolt.'' SIGGRAPH 2009: Talks. (DOI:10.1145 / 1597990.1597997)}
 \publication{C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' International Journal for Numerical Methods in Engineering. Volume 88, Issue 10, pages 1042-1065, 9 December 2011. (DOI:10.1002 / nme.3211)}
-\publication{\textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second-order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, February 2012. (DOI:10.1016 / j.jcp.2011.11.023)}
+\publication{\textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, February 2012. (DOI:10.1016 / j.jcp.2011.11.023)}
 \publication{Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' 2011. (submitted)}
+
 %\presentation{}
 
 \award{William Lowell Putnam Mathematical Competition - Top-500 Individual Placement (2001, 2004); Top-200 Individual Placement (2002, 2003); 11$^{th}$ Team Placement (2004)}
@@ -55,4 +64,10 @@ Regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob Bedrossian an
 \award{ICFP (International Conference in Functional Programming) Programming Contest - 80$^{th}$ (of 215+) place (2010); 95$^{th}$ (of 199) place (2011)}
 \award{Google Games Santa Monica - 3$^{rd}$ place (2011)}
 
-\abstract{[TODO]}
+\abstract{
+We present a collection of embedded methods to solve a variety of scientific computing problems in both $2$ and $3$ dimensions. Embedded methods make use a structured background mesh which does not conform to the irregular geometry of the problem, such as the domain boundary. Instead, the irregular geometry is embedded within the structured mesh's elements, providing a framework to solve many problems involving crack propagation, progressive fracturing, dynamic interfaces, and shape optimization.
+
+In Part I, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to investigate the modeling of cracks, surgical incisions, and shattering. Specifically, we present a geometrically flexible and straightforward crack propagation method which combines the \emph{eXtended Finite Element Method} (XFEM) with \cite{Sifakis07} and an innovative integration scheme which makes use of a subordinate quadrature mesh. We also discuss the application of \cite{Sifakis07} and other advances in numerical methods to address the challenges of a virtual surgery simulator. We conclude Part I by describing a system to facilitate the modeling cracked and shattered objects in the context of visual effects and computer animation.
+
+In Part II, we present a numerical method utilizing virtual degrees of freedom to efficiently solve elliptic partial differential equations (specifically: Poisson's equation with interfacial jump conditions; and linear elasticity in the nearly incompressible regime) on irregular domains within a regular background Cartesian grid. Our method enforces Dirichlet boundary conditions and interfacial jump conditions weakly, formulating our system as a constrained minimization problem. In this context, we describe an algorithm to generate an associated discrete Lagrange multiplier space that allows one to derive an equivalent symmetric positive definite linear system. We provide a family of multigrid algorithms to solve this linear system with near optimal efficiency. Our method is second order accurate in $L^{\infty}$ and possesses a feature set rarely found among the class of embedded methods.
+}
