fixing references and acknowledgments

--- a/dissertation/bib/XFEM.bib
+++ b/dissertation/bib/XFEM.bib
@@ -423,7 +423,7 @@ volume = "197",
 number = "19–20",
 pages = "1699 - 1714",
 year = "2008",
-note = "<ce:title>Computational Methods in Fluid–Structure Interaction</ce:title>",
+note = "Computational Methods in Fluid–Structure Interaction",
 issn = "0045-7825",
 author = "Axel Gerstenberger and Wolfgang A. Wall",
 keywords = "Fluid–structure interaction",
