--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -26,9 +26,15 @@ I wish to thank the following for their support over the last several years as I
 \item The rest of my entering class who've remained in the department as long as I have. Or longer.
 \end{itemize}
 
-Specifically regarding Chapter~\ref{chap:partI.crackpropagation}, this research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
+Chapter~\ref{chap:partI.crackpropagation} is version (with moderate revisions) of ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials'' by Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, Jeffrey Hellrung, Joseph M. Teran in \textit{International Journal for Numerical Methods in Engineering} (88(10):1042--1065, 9 December 2011) (DOI:10.1002/\linebreak[0]nme.3211). This research was partially supported by UC Lab Fees Research Grant 09-LR-04-116741-BERA; Office of Naval Research grants N00014-03-1-0071 and N00014-10-1-0730; and National Science Foundation grants DMS-0914813 and CCF-0830554.
 
-Specifically regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions. I also wish to thank Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission on which this chapter was based. This research was supported in part by National Science Foundation grants DMS-0502315, DMS-0652427, and CCF-0830554; Department of Energy grant 09-LR-04-116741-BERA; and Office of Naval Research grants N000140310071 and N000141010730.
+Chapter~\ref{chap:partI.virtualsurgery} is a version (with minor revisions) of ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle'' by Eftychios Sifakis, Jeffrey Hellrung, Joseph Teran, Aaron Oliker, and Court Cutting,~M.D. in \textit{Studies in Health Technology and Informatics} (142:313--318, 2009) (PMID:19377176).
+
+Chapter~\ref{chap:partI.fractureanimation} is a version (with minor revisions) of ``Geometric fracture modeling in BOLT'' by Jeffrey Hellrung, Andrew Selle, Arthur Shek, Eftychios Sifakis, and Joseph Teran in \textit{SIGGRAPH 2009: Talks} (SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009) \linebreak[4] (DOI:10.1145/1597990.1597997).
+
+Chapter~\ref{chap:partII.poisson} is a version (with moderate revisions) of ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions'' by Jeffrey Lee Hellrung,~Jr., Luming Wang, Eftychios Sifakis, and Joseph M. Teran in \textit{Journal of Computational Physics} (231(4):2015--2048, February 2012) (DOI:10.1016/j.jcp.2011.11.023). I wish to thank Jacob Bedrossian and James H. von Brecht for their helpful discussions; and Russell Howes and Alexey Stomakhin for submitting typographical errors and providing comments on the later drafts of the publication submission. This research was supported in part by National Science Foundation grants DMS-0502315, DMS-0652427, and CCF-0830554; Department of Energy grant 09-LR-04-116741-BERA; and Office of Naval Research grants N000140310071 and N000141010730.
+
+Chapter~\ref{chap:partII.LE} is a version (with moderate revisions) of ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains'' by Yongning Zhu, Yuting Wang, Jeffrey Hellrung, Alejandro Cantarero, Eftychios Sifakis, and Joseph M. Teran (submitted for publication, 2011).
 }
 
 \vitaitem{2003, summer}{Research Student for Associate Professor Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
@@ -43,12 +49,12 @@ Specifically regarding Chapter~\ref{chap:partII.poisson}, I wish to thank Jacob 
 \vitaitem{2008, summer}{Graduate Associate at Walt Disney Animation Studios (Burbank, CA)}
 \vitaitem{2010, summer}{Teaching Assistant at Park City Mathematics Institute (Park City, UT)}
 
-\publication{M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006. Pages 409 - 415. (DOI:10.1109 / RAMS.2006.1677409)}
-\publication{E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' Studies in Health Technology and Informatics 2009; 142:313-8. (PMID:19377176)}
-\publication{\textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ``Geometric fracture modeling in Bolt.'' SIGGRAPH 2009: Talks. (DOI:10.1145 / 1597990.1597997)}
-\publication{C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' International Journal for Numerical Methods in Engineering. Volume 88, Issue 10, pages 1042-1065, 9 December 2011. (DOI:10.1002 / nme.3211)}
-\publication{\textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, February 2012. (DOI:10.1016 / j.jcp.2011.11.023)}
-\publication{Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' 2011. (submitted)}
+\publication{M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' \textit{Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006}, pp. 409--415, 2006. DOI:10.1109/RAMS.2006.1677409}
+\publication{Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph Teran, Aaron Oliker, Court Cutting,~M.D. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' \textit{Studies in Health Technology and Informatics}, 142:313--318, 2009. PMID:19377176}
+\publication{\textbf{Jeffrey Hellrung}, Andrew Selle, Arthur Shek, Eftychios Sifakis, Joseph Teran. ``Geometric fracture modeling in BOLT.'' \textit{SIGGRAPH 2009: Talks}, SIGGRAPH '09, pp. 7:1--7:1, New York, NY, USA, 2009. DOI:10.1145/1597990.1597997}
+\publication{Casey L. Richardson, Jan Hegemann, Eftychios Sifakis, \textbf{Jeffrey Hellrung}, Joseph M. Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' \textit{International Journal for Numerical Methods in Engineering}, 88(10):1042--1065, December 2011. DOI:10.1002/nme.3211}
+\publication{\textbf{Jeffrey Lee Hellrung,~Jr.}, Luming Wang, Eftychios Sifakis, and Joseph M. Teran. ``A Second Order Virtual Node Method for Elliptic Problems with Interfaces and Irregular Domains in Three Dimensions.'' \textit{Journal of Computational Physics}, 231(4): 2015--2048, February 2012. DOI:10.1016/j.jcp.2011.11.023}
+\publication{Yongning Zhu, Yuting Wang, \textbf{Jeffrey Hellrung}, Alejandro Cantarero, Eftychios Sifakis, Joseph M. Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' (submitted for publication, 2011)}
 
 %\presentation{}
 
